--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,62 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="time-block row">
+        <div class="hour col-1">9am</div>
+        <textarea class="textarea col-10 present textarea0" data-time data-text-area = 0></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">10am</div>
+        <textarea class="textarea col-10 present textarea1" data-time data-text-area = 1></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">11am</div>
+        <textarea class="textarea col-10 present textarea2" data-time data-text-area = 2></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">12pm</div>
+        <textarea class="textarea col-10 present textarea3" data-time data-text-area = 3></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">1pm</div>
+        <textarea class="textarea col-10 present textarea4" data-time data-text-area = 4></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">2pm</div>
+        <textarea class="textarea col-10 present textarea5" data-time data-text-area = 5></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">3pm</div>
+        <textarea class="textarea col-10 present textarea6" data-time data-text-area = 6></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">4pm</div>
+        <textarea class="textarea col-10 present textarea7" data-time data-text-area = 7></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-1">5pm</div>
+        <textarea class="textarea col-10 present textarea8" data-time data-text-area = 8></textarea>
+        <div class="saveBtn col-1"></div>
+      </div>
+
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/scripts/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+  ></script>
   </body>
 </html>
