--- a/index.html
+++ b/index.html
@@ -32,48 +32,48 @@
       <!-- Timeblocks go here -->
       <div class="time-block row">
         <div class="hour col-1">9am</div>
-        <textarea class="textarea col-10 present textarea0" data-time data-text-area = 0></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea0" data-time = 9 data-text-area = 0></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">10am</div>
-        <textarea class="textarea col-10 present textarea1" data-time data-text-area = 1></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea1" data-time = 10 data-text-area = 1></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">11am</div>
-        <textarea class="textarea col-10 present textarea2" data-time data-text-area = 2></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea2" data-time = 11 data-text-area = 2></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">12pm</div>
-        <textarea class="textarea col-10 present textarea3" data-time data-text-area = 3></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea3" data-time = 12 data-text-area = 3></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">1pm</div>
-        <textarea class="textarea col-10 present textarea4" data-time data-text-area = 4></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea4" data-time =13 data-text-area = 4></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">2pm</div>
-        <textarea class="textarea col-10 present textarea5" data-time data-text-area = 5></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea5" data-time = 14 data-text-area = 5></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">3pm</div>
-        <textarea class="textarea col-10 present textarea6" data-time data-text-area = 6></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea6" data-time =15 data-text-area = 6></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">4pm</div>
-        <textarea class="textarea col-10 present textarea7" data-time data-text-area = 7></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea7" data-time =16 data-text-area = 7></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
       <div class="time-block row">
         <div class="hour col-1">5pm</div>
-        <textarea class="textarea col-10 present textarea8" data-time data-text-area = 8></textarea>
-        <div class="saveBtn col-1"></div>
+        <textarea class="textarea col-10 textarea8" data-time = 17 data-text-area = 8></textarea>
+        <div class="saveBtn col-1"><img src = 'assets/icons/open-padlock.svg' class = 'padlock-icon'></div>
       </div>
 
 
